Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,21 +79,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'art vandelay'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "raw",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "\"art vandelay\" # \"ART VANDELAY\""
    ]
