Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "collapsed": true
    },
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\""
+    "\"art vandelay\" # \"ART VANDELAY\"\n"
    ]
   },
   {
